...
    "btn_cancel" : {
      "extractionState" : "stale",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Cancel"
          }
        },
        "fr" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Annuler"
...
            "value" : "キャンセル"
          }
        },
        "tr" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Vazgeç"
          }
        }
      }
    },
    "btn_continue" : {
      "extractionState" : "stale",
...
